--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "html-entities": "^2.5.2",
     "lucide-react": "^0.358.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
