--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query-devtools": "^5.18.1",
     "@tanstack/react-router": "^1.28.1",
     "@tanstack/router-devtools": "^1.15.23",
+    "@types/react-syntax-highlighter": "^15.5.12",
     "@uiw/codemirror-theme-vscode": "^4.21.25",
     "@uiw/react-codemirror": "^4.21.25",
     "axios": "^1.6.7",
@@ -37,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-highlight": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.4.41",
